# pysalary

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
pysalary/: app.py  breakdown.py  ni.py  table.py  tax.py
src/: main.py  salary_breakdown.py
