[tool.poetry]
name = "python-small-projects"
version = "0.1.0"
description = "A collection of small Python projects"
authors = ["Damien Butt <22627489+damienbutt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
